--- a/helloWorld.html
+++ b/helloWorld.html
@@ -7,7 +7,8 @@
     <title>Hello Platzi</title>
 </head>
 <body>
-    <h1>Sitio web cuuuuulo</h1>
-    <p>Saludos Chuchas de su madre</p>
+    <h1>Sitio web coooool</h1>
+    <p>Saludos CTM</p>
+    <p>Por favor hola amigos como estan </p>
 </body>
 </html>
